--- a/pin/templates/layout.html
+++ b/pin/templates/layout.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -27,24 +26,24 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Registrarse <span class="sr-only">(current)</span></a>
-            </li>
           </ul>
-          <form class="form-inline mt-2 mt-md-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Usuario" aria-label="Usuario">
-            <input class="form-control mr-sm-2" type="text" placeholder="Password" aria-label="Password">
+          {% if not user.is_authenticated %}
+          <form class="form-inline mt-2 mt-md-0" action="{% url 'login' %}" method="post">{% csrf_token %}
+            <input class="form-control mr-sm-2" type="text" name="username" placeholder="Usuario" aria-label="Usuario">
+            <input class="form-control mr-sm-2" type="password" name="password" placeholder="Password" aria-label="Password">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
           </form>
+          {% else %}
+          <a href="" class="btn btn-primary">Logout</a>
+          {% endif %}
         </div>
       </nav>
     </header>
 
 
     <div class="container-fluid">
-        <div class="row">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab commodi deserunt et id, itaque modi officia quia rem, repellat sint tenetur ut! Accusantium atque debitis facere mollitia nihil tempore voluptate.
-        </div>
+      {% block main %}
+      {% endblock %}
     </div>
 
 
